--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
-    "@capacitor/app": "4.1.1",
+    "@auth0/auth0-angular": "^1.11.1",
+    "@capacitor/app": "^4.1.1",
+    "@capacitor/browser": "^4.1.0",
     "@capacitor/core": "4.6.1",
     "@capacitor/haptics": "4.1.0",
     "@capacitor/keyboard": "4.1.0",
