--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "ionicons": "^6.0.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "@angular/cli": "^15.0.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.0.0",
