--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -26,3 +26,11 @@ jobs:
       
     - name: Build
       run: npm run  build --prod
+      
+    - name: Archive production artifacts
+      uses: actions/upload-artifact@v3
+      with:
+         name: dist-without-markdown
+         path: |
+           dist
+           !dist/**/*.md
