--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -32,5 +32,5 @@ jobs:
       with:
          name: dist-without-markdown
          path: |
-           dist
-           !dist/**/*.md
+           www
+           !www/**/*.md
