--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -34,3 +34,11 @@ jobs:
          path: |
            www
            !www/**/*.md
+           
+    - name: Install SSH Key
+      uses: shimataro/ssh-key-action@v2
+      with:
+        key: ${{ secrets.SSH_PRIVKEY_CRM }} 
+        known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
+    - name: Adding Known Hosts
+      run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
