--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -2,5 +2,5 @@
 	"appId": "de.mundfmagic.magicApp",
 	"appName": "M & F Magic Verwaltung",
 	"webDir": "www",
-	"bundledWebRuntime": false
+	"bundledWebRuntime": true
 }
